delete local jquery

--- a/KetoDiet.html
+++ b/KetoDiet.html
@@ -39712,7 +39712,12 @@
       type="image/x-icon"
     />
 
-    <script src="./KetoDiet_files/jquery.js.Без названия"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.js"
+      integrity="sha512-G74j2JVU7kYK7lEM17+WI0sgxWPGIob8SW93Z/YA+A0VNckeZDKHgyQbkT2uq59CBi/v/gE7bXbLdkpi5QZ9FQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="./KetoDiet_files/shakesland.js.Без названия"></script>
 
     <style type="text/css">
